<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_250sdp"
    android:background="@drawable/ic_activity_junk_clean_background">

    <ImageView
        android:id="@+id/acJunkClean_ivIcon"
        android:layout_width="@dimen/_28sdp"
        android:layout_height="@dimen/_28sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:src="@drawable/ic_junk_files_action_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:gravity="center|end"
        android:text="@string/activity_junk_clean_action_bar_text"
        android:textSize="13sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/acJunkClean_ivIcon"
        app:layout_constraintLeft_toRightOf="@+id/acJunkClean_ivIcon"
        app:layout_constraintBottom_toBottomOf="@id/acJunkClean_ivIcon" />

    <ImageView
        android:layout_width="@dimen/_164sdp"
        android:layout_height="@dimen/_164sdp"
        android:src="@drawable/ic_activity_junk_clean_total_size_icon"
        android:scaleType="fitXY"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/lstHeaderView_tvTotalSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_22sdp"
        android:paddingBottom="@dimen/_22sdp"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:text="@string/junk_clean_list_header_view_total_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/lstHeaderView_tvProgressMessage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_42sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:paddingLeft="@dimen/_12sdp"
        android:paddingRight="@dimen/_12sdp"
        android:paddingStart="@dimen/_12sdp"
        android:paddingEnd="@dimen/_12sdp"
        android:background="@drawable/label_effect"
        android:gravity="center|start"
        android:text="@string/junk_clean_list_header_view_scan"
        android:textColor="@color/textColorPrimary"
        android:textSize="14sp"
        android:ellipsize="middle"
        android:singleLine="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>